fix a issue.(missing border radius)

--- a/sass/partials/_charts.scss
+++ b/sass/partials/_charts.scss
@@ -175,7 +175,7 @@
 	padding-top: 0;
 	padding-left: 0;
 	height: 100%;
-	width: 100%;
+	width: calc(100% - 12px);
 }
 
 .label {
