--- a/sass/partials/content/_graph-prices.scss
+++ b/sass/partials/content/_graph-prices.scss
@@ -124,7 +124,6 @@
 
 	&__controls__btn {
 		position: absolute;
-		left: -12px;
 		top: 0px;
 		bottom: 0px;
 		width: 12px;
@@ -135,8 +134,10 @@
 		z-index: 2;
 		cursor: pointer;
 		border: solid 2px var(--clr-block);
-		border-top-width: 0;
-		border-bottom-width: 0;
+		border-top-left-radius: var(--border-radius);
+		border-bottom-left-radius: var(--border-radius);
+		// border-top-width: 0;
+		// border-bottom-width: 0;
 
 		&:after {
 			content: "";
@@ -153,7 +154,7 @@
 		left: calc(100% - 12px);
 		top: 0px;
 		bottom: 0px;
-		width: 12px;
+		width: 10px;
 		background: var(--clr-separator);
 		display: flex;
 		justify-content: center;
@@ -164,6 +165,7 @@
 		border-top-right-radius: var(--border-radius);
 		border-bottom-right-radius: var(--border-radius);
 		border: solid 2px var(--clr-block);
+		border-left: 0px;
 
 		&:after {
 			content: "";
@@ -189,6 +191,7 @@
 	&__scroll {
 		width: 172px;
 		margin: 0;
+		padding-left: 6px;
 	}
 
 	&__scrollup__btn,
